--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,14 @@
 Package: scorecard
 Type: Package
-Title: College Scorecard Data, 1996-2013
-Version: 0.1
-Date: 2015-09-17
-Maintainer: JJ Chen <jiajia.chern@gmail.com>
-Description: College Scorecard raw data as an R data package.
+Title: College Scorecard Data, 1996-2014
+Version: 0.2.0
+Authors@R: person("JJ", "Chen", , "jiajia.chern@gmail.com", c("aut", "cre"))
+Description: Contains data from the College Scorecard <https://collegescorecard.ed.gov>.
+Depends:
+    R (>= 3.2.0)
 License: CC0
-LazyData: TRUE
+Encoding: UTF-8
+LazyData: true
 URL: https://github.com/jjchern/scorecard
+BugReports: https://github.com/jjchern/scorecard/issues
+RoxygenNote: 6.0.1
